<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_header_container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_nav_header_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/side_nav_bar" />

    <LinearLayout
        android:id="@+id/view_group_nav_header_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <com.hb.uiwidget.CircleImageView
            android:id="@+id/image_view_nav_header_avatar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@drawable/ic_avatar_customer" />

        <TextView
            android:id="@+id/text_view_nav_header_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/text_view_nav_header_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:textAppearance="?attr/textAppearanceCaption"
            android:textColor="@color/white" />

    </LinearLayout>
</FrameLayout>